--- a/days/w2d1/w2d1.ipynb
+++ b/days/w2d1/w2d1.ipynb
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import OrderedDict\n",
-    "from typing import Callable, Dict, Optional\n",
+    "from typing import Callable, Dict, Optional, Tuple, Union\n",
     "\n",
     "import torch as t\n",
     "from torch import nn\n",
@@ -408,26 +408,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bert MATCH!!!!!!!!\n",
+      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.432 0.1186 -0.7165 -0.5261 0.4967 1.223 0.3165 -0.3247 -0.5716...]\n"
+     ]
+    }
+   ],
    "source": [
-    "class BertClassificationHead(nn.Module):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        hidden_size: int,\n",
-    "        num_classes: int,\n",
-    "        dropout: float,\n",
-    "    ):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.dropout = nn.Dropout()\n",
-    "        self.linear = nn.Linear(in_features=hidden_size, out_features=num_classes)\n",
-    "\n",
-    "    def forward(self, xs: t.Tensor) -> t.Tensor:\n",
-    "        return self.linear(self.dropout(xs[:, 0]))\n",
-    "\n",
-    "\n",
     "class Bert(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -439,6 +432,7 @@
     "        intermediate_size: int,\n",
     "        num_heads: int,\n",
     "        num_layers: int,\n",
+    "        num_classes: Optional[int] = None,\n",
     "    ):\n",
     "        super().__init__()\n",
     "        self.vocab_size = vocab_size\n",
@@ -482,26 +476,23 @@
     "            )\n",
     "        )\n",
     "\n",
+    "        self.classification_head = None if num_classes is None else nn.Sequential(\n",
+    "            nn.Dropout(dropout),\n",
+    "            nn.Linear(in_features=hidden_size, out_features=num_classes)\n",
+    "        )\n",
+    "\n",
     "    def transformer_output(self, input_ids: t.Tensor) -> t.Tensor:\n",
     "        token_type_ids = t.zeros_like(input_ids)\n",
     "        embed = self.embedding(input_ids, token_type_ids)\n",
     "        return self.transformer(embed)\n",
     "\n",
-    "\n",
-    "    def forward(self, input_ids: t.Tensor) -> t.Tensor:\n",
-    "        return self.lm_head(self.transformer_output(input_ids))\n",
-    "\n",
-    "\n",
-    "class BertClassifier(nn.Module):\n",
-    "    def __init__(self, num_classes: int, bert: Bert):\n",
-    "        super().__init__()\n",
-    "        self.bert = bert\n",
-    "        self.classification_head = BertClassificationHead(\n",
-    "            hidden_size=bert.hidden_size, num_classes=num_classes, dropout=bert.dropout\n",
-    "        )\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        return self.classification_head(self.bert.transformer_output(x))\n",
+    "    def forward(self, input_ids: t.Tensor) -> Union[t.Tensor, Tuple[t.Tensor, t.Tensor]]:\n",
+    "        transformer_output = self.transformer_output(input_ids)\n",
+    "        lm_output = self.lm_head(transformer_output)\n",
+    "        if self.classification_head is not None:\n",
+    "            return (lm_output, self.classification_head(transformer_output[:, 0]))\n",
+    "        return lm_output\n",
+    "        \n",
     "\n",
     "\n",
     "# bert_tests.test_bert(Bert)\n"
