still trying to classify

--- a/days/w2d1d2/bert.ipynb
+++ b/days/w2d1d2/bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "attention pattern raw MATCH!!!!!!!!\n",
-      " SHAPE (2, 12, 3, 3) MEAN: -0.0001333 STD: 0.1026 VALS [-0.06303 -0.05638 -0.1401 -0.1512 -0.04511 0.05861 0.03294 0.1125 -0.04501 -0.1422...]\n"
+      " SHAPE (2, 12, 3, 3) MEAN: 0.01187 STD: 0.1058 VALS [-0.08359 0.04135 -0.3284 -0.07717 -0.08166 -0.06112 0.167 -0.09143 -0.05247 0.08712...]\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "attention MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: -0.003042 STD: 0.1226 VALS [0.09244 0.2714 0.1809 -0.02865 -0.06071 0.03604 -0.08844 -0.02545 0.1946 0.1109...]\n"
+      " SHAPE (2, 3, 768) MEAN: -0.005397 STD: 0.1188 VALS [-0.1328 -0.03846 0.0552 0.05028 -0.2345 0.2486 -0.05643 -0.1067 -0.05023 0.2406...]\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,16 +359,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "130611270 130611270\n",
       "bert MATCH!!!!!!!!\n",
-      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.432 0.1186 -0.7165 -0.5261 0.4967 1.223 0.3165 -0.3247 -0.5716...]\n"
+      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.432 0.1186 -0.7165 -0.5261 0.4967 1.223 0.3165 -0.3247 -0.5716...]\n",
+      "bert MATCH!!!!!!!!\n",
+      " SHAPE (1, 2) MEAN: 0.09479 STD: 1.411 VALS [-0.903 1.093]\n"
      ]
     }
    ],
@@ -395,7 +396,7 @@
     "        self.lm_head = BertUnembed(hidden_size, vocab_size)\n",
     "        self.classification_head = torch.nn.Linear(hidden_size, num_classes)\n",
     "\n",
-    "    def forward(self, input_ids, classification_mode=False):\n",
+    "    def forward(self, input_ids, only_classification=False):\n",
     "        token_type_ids = torch.zeros_like(input_ids, device=input_ids.device)\n",
     "\n",
     "        embeddings = self.embedding(input_ids, token_type_ids)\n",
@@ -404,26 +405,16 @@
     "        for block in self.transformer:\n",
     "            post_bert_blocks = block(post_bert_blocks)\n",
     "\n",
-    "        if classification_mode:\n",
-    "            return self.classification_head(post_bert_blocks)\n",
-    "        else:\n",
-    "            return self.lm_head(post_bert_blocks)\n",
+    "        lm_output = None if only_classification else self.lm_head(post_bert_blocks)\n",
+    "        return lm_output, self.classification_head(post_bert_blocks[:,0])\n",
     "\n",
-    "bertbertbert = Bert(\n",
-    "            vocab_size=28996, hidden_size=768, max_position_embeddings=512, \n",
-    "            type_vocab_size=2, dropout=0.1, intermediate_size=3072, \n",
-    "            num_heads=12, num_layers=12\n",
-    "        )\n",
-    "pytorch_total_params = sum(p.numel() for p in bertbertbert.parameters())\n",
-    "pytorch_total_trainable_params = sum(p.numel() for p in bertbertbert.parameters() if p.requires_grad)\n",
-    "print(pytorch_total_params, pytorch_total_trainable_params)\n",
-    "\n",
-    "bert_tests.test_bert(Bert)"
+    "#bert_tests.test_bert(Bert)\n",
+    "bert_tests.test_bert_classification(Bert)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -443,16 +434,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "comparing Berts MATCH!!!!!!!!\n",
-      " SHAPE (10, 20, 28996) MEAN: -2.784 STD: 2.353 VALS [-5.262 -5.396 -5.487 -5.3 -5.189 -5.368 -5.427 -5.389 -5.313 -5.3...]\n"
-     ]
+     "data": {
+      "text/plain": "_IncompatibleKeys(missing_keys=['classification_head.weight', 'classification_head.bias'], unexpected_keys=[])"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -473,7 +464,7 @@
     "del pretrained_state_dict[\"classification_head.bias\"]\n",
     "\n",
     "my_bert.load_state_dict(pretrained_state_dict, strict=False)\n",
-    "bert_tests.test_same_output(my_bert, pretrained_bert)"
+    "#bert_tests.test_same_output(my_bert, pretrained_bert)"
    ]
   },
   {
@@ -486,8 +477,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
-   "name": "python3"
+   "display_name": "Python 3.8.10 64-bit",
+   "name": "python3810jvsc74a57bd0767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
   },
   "language_info": {
    "codemirror_mode": {
