--- a/days/w2d1d2/bert_inference_training.ipynb
+++ b/days/w2d1d2/bert_inference_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "attention pattern raw MATCH!!!!!!!!\n",
-      " SHAPE (2, 12, 3, 3) MEAN: -0.002689 STD: 0.1037 VALS [-0.0166 0.0759 -0.0623 -0.0958 0.04385 0.1269 -0.02935 -0.169 0.04702 0.04498...]\n",
+      " SHAPE (2, 12, 3, 3) MEAN: -0.01378 STD: 0.1018 VALS [-0.2264 -0.004394 -0.08541 -0.08517 0.1406 -0.06768 0.09524 -0.1597 0.1848 0.06511...]\n",
       "attention MATCH!!!!!!!!\n",
-      " SHAPE (2, 3, 768) MEAN: 0.004806 STD: 0.1195 VALS [0.1319 -0.01158 -0.05224 0.2031 -0.01778 0.1567 0.01941 -0.01889 0.02216 0.07382...]\n",
+      " SHAPE (2, 3, 768) MEAN: 0.0007561 STD: 0.1152 VALS [0.01469 -0.1533 0.2156 -0.01517 0.02183 0.07564 -0.06015 0.08174 0.1464 -0.01574...]\n",
       "bert MATCH!!!!!!!!\n",
       " SHAPE (2, 3, 768) MEAN: -0.001554 STD: 0.1736 VALS [-0.08316 -0.09165 -0.03188 -0.03013 0.1001 0.09549 -0.1046 0.07742 0.0424 0.05553...]\n",
       "bert mlp MATCH!!!!!!!!\n",
@@ -28,26 +28,19 @@
       "True\n",
       "bert embedding MATCH!!!!!!!!\n",
       " SHAPE (2, 3, 768) MEAN: 0 STD: 1 VALS [0.2316 0.08455 -0.5146 1.436 2.029 -1.117 2.775 -0.5305 -0.4485 -0.2485...]\n",
-      "130611270 130611270\n",
       "bert MATCH!!!!!!!!\n",
-      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.432 0.1186 -0.7165 -0.5261 0.4967 1.223 0.3165 -0.3247 -0.5716...]\n"
+      " SHAPE (1, 4, 28996) MEAN: 0.003031 STD: 0.5765 VALS [-0.5742 -0.432 0.1186 -0.7165 -0.5261 0.4967 1.223 0.3165 -0.3247 -0.5716...]\n",
+      "bert MATCH!!!!!!!!\n",
+      " SHAPE (1, 2) MEAN: 0.09479 STD: 1.411 VALS [-0.903 1.093]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
+      "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
       "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "comparing Berts MATCH!!!!!!!!\n",
-      " SHAPE (10, 20, 28996) MEAN: -2.796 STD: 2.407 VALS [-5.172 -5.74 -5.461 -5.619 -5.017 -5.26 -5.695 -5.955 -5.663 -5.635...]\n"
      ]
     }
    ],
@@ -57,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,20 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('fish', 0.16), ('meat', 0.09), ('eggs', 0.07), ('food', 0.04), ('apples', 0.03)]\n",
-      "[('fish', 0.11), ('eggs', 0.07), ('meat', 0.04), ('fruit', 0.02), ('bread', 0.02)]\n",
-      "[('fish', 0.08), ('meat', 0.06), ('eggs', 0.05), ('bread', 0.02), ('vegetables', 0.02)]\n",
-      "[('fish', 0.05), ('meat', 0.03), ('eggs', 0.02), ('apples', 0.01), ('fruit', 0.01)]\n",
-      "[('fish', 0.06), ('meat', 0.03), ('eggs', 0.03), ('salt', 0.02), ('fruit', 0.02)]\n",
-      "[('fish', 0.06), ('eggs', 0.03), ('meat', 0.03), ('birds', 0.02), ('fruit', 0.02)]\n",
-      "[('fish', 0.04), ('more', 0.03), ('birds', 0.02), ('eggs', 0.01), ('honey', 0.01)]\n"
+      "[('fish', 0.12), ('eggs', 0.09), ('meat', 0.08), (',', 0.07), ('apples', 0.03)]\n",
+      "[('fish', 0.13), ('meat', 0.07), ('eggs', 0.07), ('salt', 0.02), ('potatoes', 0.02)]\n",
+      "[('fish', 0.09), ('eggs', 0.04), ('meat', 0.03), ('salt', 0.02), ('potatoes', 0.02)]\n",
+      "[('fish', 0.06), ('meat', 0.02), ('eggs', 0.02), ('salt', 0.02), ('bread', 0.02)]\n",
+      "[('fish', 0.05), ('meat', 0.03), ('salt', 0.02), ('eggs', 0.02), ('food', 0.01)]\n",
+      "[('fish', 0.08), ('meat', 0.02), ('fruit', 0.02), ('salt', 0.02), ('eggs', 0.02)]\n",
+      "[('fish', 0.05), ('more', 0.03), ('honey', 0.02), ('birds', 0.02), ('salt', 0.01)]\n"
      ]
     }
    ],
@@ -120,7 +113,7 @@
     "    for idx, token_id in enumerate(token_ids[0]):\n",
     "        if token_id == 103: # 103 == [MASK]\n",
     "            mask_idxs.add(idx)\n",
-    "    unnormalized_output = bert(token_ids)\n",
+    "    unnormalized_output, _classifications = bert(token_ids)\n",
     "    output = torch.log_softmax(unnormalized_output, dim=-1)\n",
     "    top_k = torch.topk(output, 5, dim=-1)\n",
     "    results = []\n",
@@ -135,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -214,30 +207,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "data = make_batches(data_train_list, 64, 512)\n",
     "bert = make_bert().cuda()\n",
-    "lossfn = nn.CrossEntropyLoss()\n",
-    "lr = 1e-5\n",
-    "optimizer = torch.optim.Adam(bert.parameters(), lr)\n",
-    "data = make_batches(data_train_list, 128, 512)"
+    "lossfn = nn.CrossEntropyLoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "lr = 1e-5\n",
+    "optimizer = torch.optim.Adam(bert.parameters(), lr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "213ce8cfc4e740edad362a7d8d3f2468",
+       "model_id": "ec6c803093504e059388a950b2733083",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": "  0%|          | 0/196 [00:00<?, ?it/s]"
+      "text/plain": "  0%|          | 0/391 [00:00<?, ?it/s]"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -246,12 +249,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.6984, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-      "tensor(0.6961, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-      "tensor(0.6908, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-      "tensor(0.6872, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-      "tensor(0.7069, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
-      "tensor(0.7012, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(0.7025, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7089, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7061, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6965, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6953, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6930, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6997, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6879, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6856, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7036, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6946, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6976, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6859, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6889, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6881, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6948, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6927, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7019, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7027, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7013, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6969, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7109, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6968, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6925, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6938, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6879, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7005, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6892, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6894, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6948, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6919, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7024, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6964, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6862, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6827, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6966, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6969, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6957, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6978, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7062, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6924, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7012, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6927, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6862, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6989, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7047, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6925, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6950, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7122, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6926, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6967, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7065, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6919, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6852, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6968, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6963, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7079, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6960, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6847, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7008, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7020, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.7028, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6901, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6881, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6842, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6943, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6942, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6928, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6911, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6881, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6979, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6910, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6844, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6925, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6916, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6923, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6917, device='cuda:0', grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.6994, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -262,22 +337,34 @@
     "    for X, y in tqdm(data):\n",
     "        optimizer.zero_grad()\n",
     "        X = X.cuda()\n",
-    "        y_hat = model(X, classification_mode=True)[:,0].softmax(dim=-1)\n",
+    "        _lm_output, y_hat = model(X)\n",
+    "        #y_hat = y_hat.softmax(-1)\n",
     "        loss = lossfn(y_hat, y.cuda())\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        i += 1\n",
-    "        if i % 30 == 0:\n",
+    "        if i % 5 == 0:\n",
     "            print(loss)\n",
     "train(bert, optimizer, data, lossfn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[0.4230, 0.5770]], device='cuda:0', grad_fn=<SoftmaxBackward0>)"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bert(torch.tensor(tokenizer.encode(\"This was an average movie.\")).unsqueeze(0).cuda())[1].softmax(-1)"
+   ]
   }
  ],
  "metadata": {
